Wed Feb 22 18:31:12 1995  John Gilmore  (gnu at toad.com)

	* k5-int.h:  Remove commented-out <widen.h> and <narrow.h>.
	* krb5.h: Same as old krb5/krb5.h, as a start.  Gradually things
	that don't need to be exported will be moved from krb5.h into
	k5-int.h (and vice verse for e.g. function prototypes).

Wed Jan 25 19:19:38 1995  John Gilmore  (gnu at toad.com)

	Make it possible to #include "..." without using slashes,
	for Macintosh support.

	* krb5.h:  New file, the externally visible interface to
	Kerberos V5.  Currently the whole kitchen sink, to bootstrap.
	* k5-int.h:  New file, the internally visible declarations
	needed by source files that are part of the Kerberos V5 library
	itself.  Currently the same whole kitchen sink, to bootstrap.

Fri Nov 18 00:16:31 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use WITH_CCOPTS.
